deploy: 2f9edaacdbda727761729dc95b1c76ffe4e8cf0f

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -79,27 +79,27 @@ window.onload = wrap_img;
     <ol>
   <li>
     <p>Intelligent Vision-based Malware Classification using Quantised ResNets
-Sashank Sridhar; Rahul Seetharaman; Sowmya Sanagavarapu
+Sashank Sridhar; Rahul Seetharaman; Sowmya Sanagavarapu;
 2021 IEEE 12th Annual Information Technology, Electronics and Mobile Communication Conference (IEMCON)</p>
   </li>
   <li>
     <p>Stock Price Prediction using Bi-Directional LSTM based Sequence to Sequence Modeling and Multitask Learning
-Siddartha Mootha; Sashank Sridhar; Rahul Seetharaman; S. Chitrakala
+Siddartha Mootha; Sashank Sridhar; Rahul Seetharaman; S. Chitrakala;
 2020 11th IEEE Annual Ubiquitous Computing, Electronics &amp; Mobile Communication Conference (UEMCON)</p>
   </li>
   <li>
     <p>A Study on Co-occurrence of various Lung Diseases and COVID-19 by observing Chest X-Ray Similarity using Deep Convolutional Neural Networks
-Sashank Sridhar; Siddartha Mootha; Rahul Seetharaman; Arockia Xavier Annie Rayan
+Sashank Sridhar; Siddartha Mootha; Rahul Seetharaman; Arockia Xavier Annie Rayan;
 2020 Fourth International Conference On Intelligent Computing in Data Sciences (ICDS)</p>
   </li>
   <li>
     <p>Detection and State Analysis of Drowsiness using Multitask Learning with Neural Networks
-Rahul Seetharaman; Sashank Sridhar; Siddartha Mootha
+Rahul Seetharaman; Sashank Sridhar; Siddartha Mootha;
 2020 Fourth International Conference On Intelligent Computing in Data Sciences (ICDS)</p>
   </li>
   <li>
-    <p>Singularity: Planet-Scale, Preemptive and Elastic Scheduling of AI Workloads
-Dharma Shukla, Muthian Sivathanu, Srinidhi Viswanatha, Bhargav Gulavani, Rimma Nehme, Amey Agrawal, Chen Chen, Nipun Kwatra, Ramachandran Ramjee, Pankaj Sharma, Atul Katiyar, Vipul Modi, Vaibhav Sharma, Abhishek Singh, Shreshth Singhal, Kaustubh Welankar, Lu Xun, Ravi Anupindi, Karthik Elangovan, Hasibur Rahman, Zhou Lin, Rahul Seetharaman, Cheng Xu, Eddie Ailijiang, Suresh Krishnappa, Mark Russinovich (Microsoft)</p>
+    <p>Singularity: Planet-Scale, Preemptive and Elastic Scheduling of AI Workloads;
+Dharma Shukla, Muthian Sivathanu, Srinidhi Viswanatha, Bhargav Gulavani, Rimma Nehme, Amey Agrawal, Chen Chen, Nipun Kwatra, Ramachandran Ramjee, Pankaj Sharma, Atul Katiyar, Vipul Modi, Vaibhav Sharma, Abhishek Singh, Shreshth Singhal, Kaustubh Welankar, Lu Xun, Ravi Anupindi, Karthik Elangovan, Hasibur Rahman, Zhou Lin, Rahul Seetharaman, Cheng Xu, Eddie Ailijiang, Suresh Krishnappa, Mark Russinovich (Microsoft); ArxiV</p>
   </li>
 </ol>
 
