--- a/index.html
+++ b/index.html
@@ -4,12 +4,5 @@ search_exclude: true
 image: images/logo.png
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
-
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
-
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
-
-You can edit the `index.html` file to change this content.
-
-# Posts
+I am Rahul Seetharaman, an (incoming) MS CS student at the University of Massachusetts Amherst. Previously, I worked at Microsoft Research India as a Software Engineer, in the Systems group, under Dr Muthian Sivathanu. 
+I am very interested in Natural Language Processing, and on the lookout for research opportunities in the same.
