--- a/index.html
+++ b/index.html
@@ -66,20 +66,13 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/site/about/">About Me</a><a class="page-link" href="/site/pubs/">Publications</a><a class="page-link" href="/site/search/">Search</a><a class="page-link" href="/site/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/site/pubs/">Publications</a><a class="page-link" href="/site/search/">Search</a><a class="page-link" href="/site/categories/">Tags</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
-
-<p><img src="/site/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
-
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
-
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
-
-<h1 id="posts">Posts</h1>
+        <div class="home"><p>I am Rahul Seetharaman, an (incoming) MS CS student at the University of Massachusetts Amherst. Previously, I worked at Microsoft Research India as a Software Engineer, in the Systems group, under Dr Muthian Sivathanu. 
+I am very interested in Natural Language Processing, and on the lookout for research opportunities in the same.</p>
 
 
 
