--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@ search_exclude: true
 image: images/logo.png
 ---
 
-I am Rahul Seetharaman, an (incoming) MS CS student at the University of Massachusetts Amherst. Previously, I worked at Microsoft Research India as a Software Engineer, in the Systems group, under Dr Muthian Sivathanu. 
-I am very interested in Natural Language Processing, and on the lookout for research opportunities in the same.
+<img src="images/dp.png"></img>
+
+<h2>I am Rahul Seetharaman, an (incoming) MS CS student at the University of Massachusetts Amherst. Previously, I worked at Microsoft Research India as a Software Engineer, in the Systems group, under Dr Muthian Sivathanu. 
+I am very interested in Natural Language Processing, and on the lookout for research opportunities in the same.</h2>
