--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>I am Rahul Seetharaman, an (incoming) MS CS student at the University of Massachusetts Amherst. Previously, I worked at Microsoft Research India as a Software Engineer, in the Systems group, under Dr Muthian Sivathanu. 
-I am very interested in Natural Language Processing, and on the lookout for research opportunities in the same.</p>
+        <div class="home"><p><img src="images/dp.png" />&lt;/img&gt;</p>
+
+<h2>I am Rahul Seetharaman, an (incoming) MS CS student at the University of Massachusetts Amherst. Previously, I worked at Microsoft Research India as a Software Engineer, in the Systems group, under Dr Muthian Sivathanu. 
+I am very interested in Natural Language Processing, and on the lookout for research opportunities in the same.</h2>
 
 
 
