--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@ search_exclude: true
 image: images/logo.png
 ---
 
-<img src="images/dp.png"></img>
+<img src="images/dp.png" style="object-fit: cover;
+border-radius: 50%;
+height: 150px;
+width: 150px;">
 
-<h2>I am Rahul Seetharaman, an (incoming) MS CS student at the University of Massachusetts Amherst. Previously, I worked at Microsoft Research India as a Software Engineer, in the Systems group, under Dr Muthian Sivathanu. 
+<h2>I am Rahul Seetharaman, an incoming MS CS student at the University of Massachusetts Amherst. Previously, I worked at Microsoft Research India in the Singularity AI project, under Dr Muthian Sivathanu. 
 I am very interested in Natural Language Processing, and on the lookout for research opportunities in the same.</h2>
