deploy: c87c04a09cf3d5c9a021bb32d8668181504783a0

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img src="images/dp.png" />&lt;/img&gt;</p>
+        <div class="home"><p><img src="images/dp.png" style="object-fit: cover; border-radius: 50%; height: 150px; width: 150px;" /></p>
 
-<h2>I am Rahul Seetharaman, an (incoming) MS CS student at the University of Massachusetts Amherst. Previously, I worked at Microsoft Research India as a Software Engineer, in the Systems group, under Dr Muthian Sivathanu. 
+<h2>I am Rahul Seetharaman, an incoming MS CS student at the University of Massachusetts Amherst. Previously, I worked at Microsoft Research India in the Singularity AI project, under Dr Muthian Sivathanu. 
 I am very interested in Natural Language Processing, and on the lookout for research opportunities in the same.</h2>
 
 
