--- a/404.html
+++ b/404.html
@@ -64,7 +64,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/site/pubs/">Publications</a><a class="page-link" href="/site/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/site/pubs/">Publications</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
